--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
     "dayjs": "^1.11.13",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "firebase": "^11.1.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.7",
