--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^11.1.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.7",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.1",
     "react-icons": "^5.4.0",
