--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "kabinari-project",
   "version": "0.1.0",
+  "homepage": "https://sgrahmet.github.io/Kabinari-Project/",
+
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -29,7 +31,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -48,5 +53,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
+ 
 }
